updated thumbnail logic

--- a/src/assets/gallery/manifest.json
+++ b/src/assets/gallery/manifest.json
@@ -1,8 +1,8 @@
 [
   "1.jpeg",
-  "goaVideo.mp4",
+  "video1.mp4",
   "2.jpeg",
-  "video.MP4",
+  "video2.MP4",
   "3.jpeg",
   "4.jpeg",
   "5.jpeg",
